rust-examples/tests/compile-fail/Rule_9_3.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let x: [i32; 3] = [ 0, 1 ];
    println!("{:?}", x);
}
